[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]

[node name="GUI Layer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.364706, 0.388235, 0.678431, 0.270588 )
anchor_right = 1.0
margin_bottom = 40.0

[node name="Elec" type="RichTextLabel" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -8.0
margin_right = 129.0
margin_bottom = 8.0
text = "Electricity:"

[node name="rawMat" type="RichTextLabel" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 150.0
margin_top = -8.0
margin_right = 315.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( -42, -52 )
text = "Raw Materials: "

[node name="refMetal" type="RichTextLabel" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 329.0
margin_top = -8.0
margin_right = 508.0
margin_bottom = 8.0
text = "Refined Metal: "

[node name="Gold" type="RichTextLabel" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 557.0
margin_top = -8.0
margin_right = 674.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( -42, -52 )
text = "Gold: "

[node name="nuclearMat" type="RichTextLabel" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 784.0
margin_top = -8.0
margin_right = 962.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( -42, -52 )
text = "Nuclear Materials: "
